--- a/Gymnasiearbete/Gymnasiearbete.csproj
+++ b/Gymnasiearbete/Gymnasiearbete.csproj
@@ -15,4 +15,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.10" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.10" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Engine\Engine.csproj" />
+  </ItemGroup>
 </Project>
